fix(a11y): color contrast ratio fix

--- a/source/assets/sass/components/_docsearch.scss
+++ b/source/assets/sass/components/_docsearch.scss
@@ -4,3 +4,7 @@
   justify-content: center;
   height: 100%;
 }
+
+.DocSearch-Button-Placeholder {
+  color: #4A4F4F;
+}
